# self-critique-drift-4703-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  arc_challenge_sample.json  truthfulqa_sample.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: representation_drift_mechanistic_interpretability_transformer_probing_linear_sep_20260308_061850.jsonl
papers/: README.md  arxiv_search_results.json  curated_papers.json  fetch_semantic_scholar.py  semantic_scholar_results.json  to_download.json
papers/pages/: 2305.20050_manifest.txt  2309.12288_manifest.txt  2310.01405_manifest.txt  2310.06824_manifest.txt  2310.11511_manifest.txt  2506.12217_manifest.txt  2602.20338_manifest.txt  2603.01326_manifest.txt
results/: analysis_results.json
results/data/: labels.npy  seq_lengths.json  stimuli.json
src/: analysis.py  extract_activations.py  generate_stimuli.py
