[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.26.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformer-lens>=2.15.4",
    "transformers<5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
